# juno-ds-88-control-center

./: .gitignore  CMakeLists.txt  MidiParameter.h  MidiService.cpp  MidiService.h  README.md  juno-ds-88-control-center.md  main.cpp
progress/: progress_v.0.1.0.md  progress_v0.2.0.md
version-rules/: juno-ds-88-control-center-0.1.0.md  juno-ds-88-control-center-0.2.0.md  juno-ds-88-control-center-0.3.0.md  juno-ds-88-control-center-0.4.0.md  juno-ds-88-control-center-0.5.0.md  juno-ds-88-control-center-0.6.0.md  juno-ds-88-control-center-1.0.0.md
